Update timing variables and docs

--- a/packages/design/src/animation.mdx
+++ b/packages/design/src/animation.mdx
@@ -33,20 +33,20 @@ Delighters can be used occasionally to create surprise and delight, and can give
 personality to our brand. These can be used to reinforce success in an important
 milestones in a user's journey.
 
-## Durations
+## Timing
 
-Use judgement when determining the appropriate durations for animations. This
-will depend on the size of the element and the distance it covers. Animations
-for larger elements or longer distances should be longer than smaller elements
-or shorter distances.
+Use judgement when determining the appropriate timing durations for animations.
+This will depend on the size of the element and the distance it covers.
+Animations for larger elements or longer distances should be longer than smaller
+elements or shorter distances.
 
-| Name                 | Value | Examples of use                                         |
-| :------------------- | :---- | :------------------------------------------------------ |
-| `--duration-fastest` | 100ms | smaller elements exiting, small elements, state changes |
-| `--duration-fast`    | 200ms | larger elements exiting, small elements, state changes  |
-| `--duration-normal`  | 300ms | modals, side panels                                     |
-| `--duration-slow`    | 400ms | large elements traversing across large area             |
-| `--duration-slowest` | 500ms | page transitions                                        |
+| Name               | Value | Examples of use                                         |
+| :----------------- | :---- | :------------------------------------------------------ |
+| `--timing-quick`   | 100ms | smaller elements exiting, small elements, state changes |
+| `--timing-base`    | 200ms | larger elements exiting, small elements, state changes  |
+| `--timing-slow`    | 300ms | modals, side panels                                     |
+| `--timing-slower`  | 400ms | large elements traversing across large area             |
+| `--timing-slowest` | 500ms | page transitions                                        |
 
 ## Easing
 
