Disclosure title and arrow icon alignment fix
Also arrow will now stay at the top/first sentence if it becomes a multiline summary

--- a/packages/components/src/Disclosure/Disclosure.mdx
+++ b/packages/components/src/Disclosure/Disclosure.mdx
@@ -16,7 +16,7 @@ import { Disclosure } from "@jobber/components/Disclosure";
 ```
 
 <Playground>
-  <Disclosure title="Open to see more content">
+  <Disclosure title="Open to see more content organa palpatine lobot jawa kamino.">
     <Content>
       <p>
         Lucas ipsum dolor sit amet darth sebulba solo vader yoda bothan wedge
