--- a/packages/components/src/Popover/Popover.mdx
+++ b/packages/components/src/Popover/Popover.mdx
@@ -8,6 +8,7 @@ showDirectoryLink: true
 import { Playground, Props } from "docz";
 import { Content } from "../Content";
 import { Heading } from "../Heading";
+import { Text } from "../Text";
 import { Button } from "../Button";
 import { Checkbox } from "../Checkbox";
 import { useState, useRef } from "react";
@@ -73,6 +74,41 @@ the experience.
 If there is an "acknowledgement" CTA for the user to confirm that they
 understand the change, use a `learning`
 [Button](https://atlantis.getjobber.com/components/button).
+
+<Playground>
+  {() => {
+    const divRef = useRef();
+    const [showPopover, setShowPopover] = useState(false);
+    return (
+      <>
+        <span ref={newFeatureButton}>
+          <Button
+            label="New Feature"
+            onClick={() => setShowPopover(!showPopover)}
+          />
+        </span>
+        <Popover
+          attachTo={newFeatureButton}
+          open={showPopover}
+          preferredPlacement="right"
+          onRequestClose={() => setShowPopover(false)}
+        >
+          <Content>
+            <Heading>New feature!</Heading>
+            <Text>You can now press a button that you couldn't before.</Text>
+            <div style="display:flex;align-items:flex-end;">
+              <Button
+                label="Got it"
+                variation="learning"
+                onClick={() => setShowPopover(!showPopover)}
+              />
+            </div>
+          </Content>
+        </Popover>
+      </>
+    );
+  }}
+</Playground>
 
 ### Related Components
 
