add clarity to lines of content rationale

--- a/packages/components/src/Popover/Popover.mdx
+++ b/packages/components/src/Popover/Popover.mdx
@@ -134,8 +134,8 @@ your use case.
 
 ## Content Guidelines
 
-- Popover text content should not exceed three lines, and should be concise and
-  clear
+- Popover text content should be concise and clear. Try not to go over three
+  lines so the user can get back to what they were doing!
 - In "informational" usage, Popper may have a CTA that allows the user to
   "acknowledge" and dismiss the Popover; this does not replace the need for the
   dismiss button
