--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -3,12 +3,9 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
-import { ComponentStatus } from "@jobber/docx";
 import { Heading } from ".";
 
 # Heading
-
-<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Headings are used as the titles of each major section of a page in the
 interface. Reserved for short, important text or numbers.
@@ -21,7 +18,7 @@ import { Heading } from "@jobber/components/Heading";
   <Heading level={2}>Subtitle</Heading>
 </Playground>
 
-## Design & Usage Guidelines
+## Usage Guidelines
 
 ### Heading 1
 
@@ -107,3 +104,5 @@ of content.
 
 - For introductory text after a page title or paragraph text for body copy, use
   [Text](text).
+- To add a highlight to a Heading, use
+  [Emphasis](https://atlantis.getjobber.com/packages-components-src-emphasis-emphasis).
