--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -5,15 +5,12 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props, Link } from "docz";
-import { ComponentStatus } from "@jobber/docx";
 import { Card } from ".";
 import { Text } from "../Text";
 import { Heading } from "../Heading";
 import { Content } from "../Content";
 
 # Card
-
-<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 A card is used to group related information and tasks so our users can scan and
 prioritize information more easily.
@@ -41,6 +38,12 @@ import { Card } from "@jobber/components/Card";
   </Card>
 </Playground>
 
+## Props
+
+<Props of={Card} />
+
+---
+
 ## Design & Usage Guidelines
 
 A card is useful for grouping content because of it's distinct visual
@@ -51,13 +54,11 @@ A card should be the smallest-possible self-contained section of content. If you
 find yourself putting a card inside of another card, the outer card should be
 removed, and it may be worth re-assessing the hierarchy of your interface.
 
-## Props
+## Clickable
 
-<Props of={Card} />
-
----
-
-## Usage
+In some SC (service consumer) facing views we have card that are entirely
+interactive. These should contain a summary or preview of content that will be
+viewed after clicking on the card.
 
 ### Clickable with URL
 
