--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -6,13 +6,10 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
-import { ComponentStatus } from "@jobber/docx";
 import { Checkbox } from ".";
 import { useState } from "react";
 
 # Checkbox
-
-<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 A checkbox lets a user select one or more items from a set of options.
 
@@ -33,7 +30,7 @@ import { Checkbox } from "@jobber/components/Checkbox";
   }}
 </Playground>
 
-## Design & Usage Guidelines
+## Usage Guidelines
 
 A checkbox is a familiar pattern for users who need to choose from a set of
 options, or opt in to a single choice.
