--- a/packages/components/src/Menu/Menu.mdx
+++ b/packages/components/src/Menu/Menu.mdx
@@ -6,14 +6,11 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
-import { ComponentStatus } from "@jobber/docx";
 import { createRef, useState } from "react";
 import { Button } from "../Button";
 import { Menu } from ".";
 
 # Menu
-
-<ComponentStatus stage="pre" responsive="no" accessible="yes" />
 
 A toggleable menu that holds a list of actions. Where `InputSelect` is used to
 select an item from a list `Menu` is used to display a dismissible menu of
@@ -107,3 +104,10 @@ import { Menu } from "@jobber/components/Menu";
   />
 
 </Playground>
+
+## Related components
+
+- For a toggle-able container that can be attached to any element, use
+  [Menu](https://atlantis.getjobber.com/components/menu)
+- To allow the user to select one of multiple options in a form, use
+  [Select](https://atlantis.getjobber.com/components/select)
