Adjusted playground in mdx to use `<Text>`, also:
- Removed the extra `<Content>` in component, to let consumer bring that in instead
- Added some padding below `<summary>` so it can provide some spacing before content starts

--- a/packages/components/src/Disclosure/Disclosure.mdx
+++ b/packages/components/src/Disclosure/Disclosure.mdx
@@ -7,6 +7,7 @@ showDirectoryLink: true
 
 import { Playground, Props } from "docz";
 import { Content } from "@jobber/components/Content";
+import { Text } from "@jobber/components/Text";
 import { Disclosure } from ".";
 
 # Disclosure
@@ -18,14 +19,14 @@ import { Disclosure } from "@jobber/components/Disclosure";
 <Playground>
   <Disclosure title="Open to see more content organa palpatine lobot jawa kamino.">
     <Content>
-      <p>
+      <Text>
         Lucas ipsum dolor sit amet darth sebulba solo vader yoda bothan wedge
         kenobi dantooine hutt.
-      </p>
-      <p>
+      </Text>
+      <Text>
         Moff qui-gonn darth leia solo hutt gonk darth. Skywalker tatooine
         dagobah thrawn.
-      </p>
+      </Text>
     </Content>
   </Disclosure>
 </Playground>
