Revert "remove import in Banner"
This reverts commit 70f5d678d58094e7e1c9206d3b7ed3984b955083.

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -6,6 +6,7 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Banner } from ".";
 import { Content } from "@jobber/components/Content";
 
