--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -15,7 +15,7 @@ interface.
 
 Atlantis is built with a
 [semantic layer](https://dev.to/ynab/a-semantic-color-system-the-theory-hk7)
-overtop of a base pallete. Use the semantic color values whenever possible to
+overtop of a base palette. Use the semantic color values whenever possible to
 ensure you are using colors for their intended purpose.
 
 <Banner type="warning" dismissible={false}>
