finish updating playground copy

--- a/packages/components/src/Disclosure/Disclosure.mdx
+++ b/packages/components/src/Disclosure/Disclosure.mdx
@@ -23,11 +23,10 @@ may care about, should they choose to learn more about it.
   <Disclosure title="Advanced instructions">
     <Content>
       <Text>
-        To level up your .
+        Here is some helpful information to level up your business:
       </Text>
       <Text>
-        Moff qui-gonn darth leia solo hutt gonk darth. Skywalker tatooine
-        dagobah thrawn.
+        For every 2 team members you add, your profits will triple.
       </Text>
     </Content>
   </Disclosure>
