feat(design): introduce semantic colors to Atlantis foundation [JOB-28065] (#444)
* introduce semantic colors to Atlantis foundation

* add secondary disabled colour

* remove primary indicator from main text variable

* Add learning colour variation

* update action to interactive

* Flesh out semantic layer

* add semantic colours to colors.css and update card

* fix typos and remove fluff from docs

* Update packages/design/src/colors.css

* Update packages/design/src/Colors.mdx

--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -4,11 +4,24 @@ menu: Design
 route: /colors
 ---
 
-# Colors
-
-Colors for the Jobber Atlantis Design System
-
 import { ColorSwatches } from "@jobber/docx";
 import colors from "../colors";
+import { Banner } from "@jobber/components/Banner";
+
+# Colors
+
+Color can provide a visual cue for users to navigate and understand an
+interface.
+
+Atlantis is built with a
+[semantic layer](https://dev.to/ynab/a-semantic-color-system-the-theory-hk7)
+overtop of a base palette. Use the semantic color values whenever possible to
+ensure you are using colors for their intended purpose.
+
+<Banner type="warning" dismissible={false}>
+  Color should never be the single means of conveying information in an
+  interface. Use labels, iconography, or hints for assistive technology
+  alongside color to ensure your content can be understood by everyone.
+</Banner>
 
 <ColorSwatches colors={colors.customProperties} />
