fixes the descenders

--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -22,8 +22,9 @@ import { Select, Option } from "@jobber/components/Select";
 
 <Playground>
   <Select>
-    <Option value="sad">Tony</Option>
-    <Option value="old">Steve</Option>
+    <Option value="tony">Tony</Option>
+    <Option value="quincy">Quincy</Option>
+    <Option value="peppa">Peppa Pig</Option>
   </Select>
 </Playground>
 
