Fix the css for Select with minilabel

--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -21,7 +21,7 @@ import { Select, Option } from "@jobber/components/Select";
 ```
 
 <Playground>
-  <Select>
+  <Select placeholder="My best friend">
     <Option value="tony">Tony</Option>
     <Option value="quincy">Quincy</Option>
     <Option value="peppa">Peppa Pig</Option>
