address Eddy's comments (re: color-agnostic)

--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -33,7 +33,7 @@ readability.
 
 #### Heading
 
-Headings have a bold, dark color to cement their hierarchy.
+Headings have a bold, high-contrast color to cement their hierarchy.
 
 #### Text
 
@@ -110,8 +110,8 @@ Surfaces are the background-colors of almost every element in Jobber.
 
 #### Surface
 
-Most elements in Jobber have a white surface; if clickable, they have a light
-hover color.
+Most elements in Jobber have a light surface to indicate their nearness to the
+user; if clickable, they have a hover color.
 
 #### Surface--Background
 
