flesh out disabled secondary

--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -68,7 +68,9 @@ Use to signify that an interactive element is disabled.
 
 ##### Disabled--Secondary
 
-Use when a disabled element needs more than one shade.
+Use when a disabled element needs more than one color to be readable in a
+disabled state; for example, a button's background and label colors must be
+different.
 
 #### Focus
 
