--- a/packages/components/src/Drawer/Drawer.mdx
+++ b/packages/components/src/Drawer/Drawer.mdx
@@ -56,6 +56,26 @@ import { Page } from "@jobber/components/Page";
 
 <Props of={Drawer} />
 
+## Accessibility
+
+Drawer is built using an
+[`aside` element](https://www.w3.org/TR/html52/sections.html#the-aside-element)
+to indicate to assistive technology that the content within the Drawer is:
+
+> tangentially related to the content of the parenting sectioning content, and
+> which could be considered separate from that content. (W3 Org)
+
+## Related Components
+
+Drawer is similar in some regards to Card and Modal.
+
+For an experience where the user can only interact with one "mode" of content
+(the main view _or_ the contents of the component) use
+[Modal.](https://atlantis.getjobber.com/components/modal)
+
+For an inline grouping of content that is relevant within the main view and
+non-dismissible, use [Card.](https://atlantis.getjobber.com/components/modal)
+
 ## Drawer Grid (Experimental)
 
 A `DrawerGrid` wraps the content and the drawer component. It allows the content
