add arialabel to aside
- prevents assistive tech from getting confused in the case of multiple Drawers on one page

--- a/packages/components/src/Drawer/Drawer.mdx
+++ b/packages/components/src/Drawer/Drawer.mdx
@@ -19,7 +19,7 @@ import { Page } from "../Page";
 
 <ComponentStatus stage="pre" responsive="yes" accessible="no" />
 
-Drawers are temporary sidebars that allow users to view supplemantary content.
+Drawers are temporary sidebars that allow users to view supplementary content.
 Users can interact with the main content while the drawer is visible.
 
 ```ts
