--- a/packages/hooks/src/useIsMounted/useIsMounted.mdx
+++ b/packages/hooks/src/useIsMounted/useIsMounted.mdx
@@ -4,12 +4,9 @@ menu: Hooks
 route: /hooks/use-is-mounted
 ---
 
-<<<<<<< Updated upstream
-
-# ToDo
-
-======= import { Playground } from "docz"; import { Card } from
-"@jobber/components/Card"; import { Button } from "@jobber/components/Button";
+import { Playground } from "docz";
+import { Card } from "@jobber/components/Card";
+import { Button } from "@jobber/components/Button";
 import { useIsMounted } from "@jobber/hooks";
 
 # UseIsMounted
@@ -32,4 +29,3 @@ import { useIsMounted } from "@jobber/hooks";
     );
   }}
 </Playground>
->>>>>>> Stashed changes
