link to inputlivadation

--- a/packages/components/src/Toast/Toast.mdx
+++ b/packages/components/src/Toast/Toast.mdx
@@ -53,7 +53,7 @@ When contributing to, or consuming the Toast component, consider the following:
   
 ### Errors
   
-Only use Toast for errors if there is some other mechanism alerting the user of the problem (ie InlineValidation)
+Only use Toast for errors if there is some other mechanism alerting the user of the problem (such as [InputValidation](input-validation))
 so that they can recover from the error.
 
 In most cases, use [Banner](banner) so the user can appropriately assess and recover from the error.
