add an "n" to length!

--- a/packages/components/src/Toast/Toast.mdx
+++ b/packages/components/src/Toast/Toast.mdx
@@ -60,7 +60,7 @@ In most cases, use [Banner](banner) so the user can appropriately assess and rec
   
 ## Related Components
   
-For more persistent feedback, or for feedback that has a longer reading legth or CTA, use [Banner.](banner)
+For more persistent feedback, or for feedback that has a longer reading length or CTA, use [Banner.](banner)
 
 ## Props
 
