--- a/packages/hooks/src/useIsMounted/useIsMounted.mdx
+++ b/packages/hooks/src/useIsMounted/useIsMounted.mdx
@@ -5,7 +5,6 @@ route: /hooks/use-is-mounted
 ---
 
 import { Playground } from "docz";
-import { useEffect, useState } from "react";
 import { Card } from "@jobber/components/Card";
 import { Button } from "@jobber/components/Button";
 import { useIsMounted } from "@jobber/hooks";
@@ -24,7 +23,7 @@ import { useIsMounted } from "@jobber/hooks";
 <Playground>
   {() => {
     const isMounted = useIsMounted();
-    const [triggerUnmount, setTriggerUnmount] = setState(false);
+    const [triggerUnmount, setTriggerUnmount] = React.useState(false);
     useEffect(() => {
       alert("I am mounted!");
     }, [isMounted]);
